adding description GA and SA in pdf

--- a/WP_Krill_Param.Rmd
+++ b/WP_Krill_Param.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Derive growth parameters and natural mortality rates for krill considering spatial heterogeneity in Subarea 48.1"
 author:
-  - Mardones Mauricio^[Universidad de Magallanes, mamardon@umag.cl, Millennium Institute Biodiversity of Antarctic and Subantarctic Ecosystems (Base), Centro IDEAL, UaCh]
+  - Mauricio Mardoness^[Universidad de Magallanes, mamardon@umag.cl, Millennium Institute Biodiversity of Antarctic and Subantarctic Ecosystems (Base), Centro IDEAL, UaCh]
   - César Cárdenas^[Instituto Antártico Chileno, Millennium Institute Biodiversity of Antarctic and Subantarctic Ecosystems (Base)]
   - Lucas Krüger ^[Instituto Antártico Chileno, Millennium Institute Biodiversity of Antarctic and Subantarctic Ecosystems (Base)]
   - Francisco Santa Cruz ^[Instituto Antártico Chileno, Universidad de Magallanes, Millennium Institute Biodiversity of Antarctic and Subantarctic Ecosystems (Base)]
@@ -86,7 +86,7 @@ For this analysis, data from the monitoring of the krill fishery were used, whic
 
 ## Growth Parameters Estimation  (\(L_\infty\) and \(K\))
 
-To estimate growth parameters in the krill population in WAP we used Modal progression analysis (MPA). MPA is a technique that tracks the changes in the length frequency distribution of a marine population over time. This method identifies distinct modes (peaks) in the size distribution, which represent cohorts of individuals that were born at the same time.  By following these cohorts through subsequent sampling periods, it is possible to infer growth rates and other key biological parameters. The steps  to calculate parameters are: (1) Gather length-frequency data from the population at different times, this involves measuring the sizes of individuals in the population and recording the frequency of each size class; (2) Identify and track the distinct peaks (modes) in the size-frequency distributions; these peaks represent groups of individuals of similar age,  this component was calculated using `mixR` package [@Yu2021]; (3) follow the identified modes over time to see how they shift; the movement of these modes over successive sampling periods reflects the growth of the individuals in those cohorts; (4) Fit the observed shifts in modes to a growth model, such as the von Bertalanffy growth function (VBGF); this involves estimating parameters such as the (\(K\)) and (\(L_\infty\)), and the initial size at age zero (\(L_0\); (5) Use the fitted model to derive growth parameters that describe how individuals in the population grow over time. All this process about estimation of growth parameters was based on Electronic LEngth Frequency ANalysis (ELEFAN). ELEFAN is a widely used software tool that applies modal progression analysis to estimate growth parameters based on a seminal book from Pauly & Morgan (1987). It automates the process of identifying and tracking modes in length-frequency data, making the analysis more efficient and accurate. ELEFAN uses optimization techniques to find the best set of growth parameters that minimize the difference between the observed and expected sizes of individuals in each cohort over time. For krill, we used two techniques; Electronic LEngth Frequency ANalysis with Genetic Algorithm (`GA`) used for estimating growth parameters and Electronic LEngth Frequency ANalysis with Simulated Annealing (`SA`) for estimating growth parameters. These techniques allow for greater certainty in the estimation and enable comparisons between them.
+To estimate growth parameters in the krill population in WAP we used Modal progression analysis (MPA). MPA is a technique that tracks the changes in the length frequency distribution of a marine population over time. This method identifies distinct modes (peaks) in the size distribution, which represent cohorts of individuals that were born at the same time.  By following these cohorts through subsequent sampling periods, it is possible to infer growth rates and other key biological parameters. The steps  to calculate parameters are: (1) Gather length-frequency data from the population at different times, this involves measuring the sizes of individuals in the population and recording the frequency of each size class; (2) Identify and track the distinct peaks (modes) in the size-frequency distributions; these peaks represent groups of individuals of similar age,  this component was calculated using `mixR` package [@Yu2021]; (3) follow the identified modes over time to see how they shift; the movement of these modes over successive sampling periods reflects the growth of the individuals in those cohorts; (4) Fit the observed shifts in modes to a growth model, such as the von Bertalanffy growth function (VBGF); this involves estimating parameters such as the (\(K\)) and (\(L_\infty\)), and the initial size at age zero (\(L_0\); (5) Use the fitted model to derive growth parameters that describe how individuals in the population grow over time. All this process about estimation of growth parameters was based on Electronic LEngth Frequency ANalysis (ELEFAN). ELEFAN is a widely used software tool that applies modal progression analysis to estimate growth parameters based on a seminal book from Pauly & Morgan (1987). It automates the process of identifying and tracking modes in length-frequency data, making the analysis more efficient and accurate. ELEFAN uses optimization techniques to find the best set of growth parameters that minimize the difference between the observed and expected sizes of individuals in each cohort over time. For krill, we used two techniques; Electronic LEngth Frequency ANalysis with Genetic Algorithm (`GA`) and Electronic LEngth Frequency ANalysis with Simulated Annealing (`SA`) for estimating growth parameters. These techniques allow for greater certainty in the estimation and enable comparisons between them. These two technics could be explained by @Zhou2021; *"Simulated annealing is a probabilistic technique for approximating the global optimum of a given function. It is a metaheuristic to approximate global optimization in a large search space for an optimization problem. For problems where finding an approximate global optimum is more important than finding a precise local optimum in a fixed amount of time, SA may be preferable to exact algorithms. The genetic algorithm is a metaheuristic inspired by the process of natural selection. GA is commonly used to generate high-quality solutions to optimization and search problems by relying on biologically inspired operators such as mutation, crossover, and selection."*
 
 
 The von Bertalanffy growth function, which is often used in modal progression analysis and implemented in ELEFAN, is expressed as:
