--- a/param.bib
+++ b/param.bib
@@ -438,4 +438,28 @@ title = {{On one of the approaches to estimation of natural mortality of fish po
 url = {https://www.nafo.int/icnaf/library/docs/1976/res-08.pdf},
 year = {1976}
 }
-
+@unpublished{Ying2022,
+author = {Ying, Y and Wang, X and Zhao, X and Xu, Q},
+file = {:Users/mauriciomardones/REFERENCIAS/Ref{\_}Thesis{\_}UMAG/LH{\_}Parameters{\_}Krill/WG-SAM-2022$\backslash$:26.pdf:pdf},
+institution = {CCAMLR},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+title = {{Wg-sam-2022/26 13. The status of Grym simulations developed in 2021}},
+year = {2022}
+}
+@unpublished{Maschette2021,
+author = {Maschette, D and Wotherspoon, S and Kawaguchi, S and Ziegler, P},
+file = {:Users/mauriciomardones/REFERENCIAS/Ref{\_}Thesis{\_}UMAG/LH{\_}Parameters{\_}Krill/WG-FSA-2021$\backslash$:39.pdf:pdf},
+institution = {CCAMLR},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+title = {{Wg-fsa-2021/39 29. Grym assessment for Subarea 48.1 Euphausia superba populations}},
+year = {2021}
+}
+@misc{Zhou2021,
+abstract = {Citation Zhou, S., Hutton, T., Lei, Y., Miller, M., van Der Velde, T., and Deng, A. R. (2022) Modelling growth of red endeavour prawns (Metapenaeus ensis) using new ELEFAN and Bayesian growth models. Final report to Australian Fishery Management Authority. Brisbane, Australia.},
+author = {Zhou, Shijie and Hutton, Trevor and Lei, Yeming and Miller, Margaret and {Van Der Velde}, Tonya and Deng, Roy},
+file = {:Users/mauriciomardones/REFERENCIAS/Ref{\_}Thesis{\_}UMAG/LH{\_}Parameters{\_}Krill/Zhouetal2022.pdf:pdf},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+number = {January},
+title = {{Modelling growth of red endeavour prawns (Metapenaeus ensis) using new ELEFAN and Bayesian growth models}},
+year = {2022}
+}
